<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:id="@+id/card_view"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="#fff6a0"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />


        <CheckBox
            android:id="@+id/cbDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="15dp"
            android:checked="false"
            android:scaleX="1.5"
            android:scaleY="1.5"
            card_view:layout_constraintBottom_toTopOf="@+id/btnDelete"
            card_view:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/delete"
            android:textSize="18sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/btnEdit"
            card_view:layout_constraintStart_toEndOf="@+id/btnEdit" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="28dp"
            android:text="@string/view_item_details"
            android:textSize="18sp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/imageIcon" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/quantity_x15"
            android:textSize="19sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/imageIcon"
            card_view:layout_constraintStart_toStartOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/bread"
            android:textSize="25sp"
            card_view:layout_constraintStart_toEndOf="@+id/imageIcon"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPurchased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="5dp"
            android:text="@string/purchased"
            card_view:layout_constraintBottom_toTopOf="@+id/cbDone"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/cost_per_unit"
            card_view:layout_constraintStart_toStartOf="@+id/tvQuantity"
            card_view:layout_constraintTop_toBottomOf="@+id/tvQuantity" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>